# jade-stock

./: .gitignore  ANALISE_CODIGO_LEGADO.md  CONTRIBUTING.md  DOCS_BOAS_PRACTICES.md  ENRIQUECIMENTO_BIBLIA.md  GUIA_DO_PROJETO_TDAH.md  JADE-STOCK-BIBLIA-DO-SISTEMA.md  MELHORIAS_BIBLIA_IMPLEMENTADAS.md  README.md  RESUMO_LIMPEZA.md  docker-compose.postgres.yml  guia_de_estruture.md  jade-stock-adendos.docx.md  jade-stock-documentacao (2).docx.md  styles.css
Database/: README.md  schema_core.sql  schema_extended.sql
Estudos/: guia_estudos_modulos_api_ia_contabil.html  index.html
LaboratorioDepositoBebidas/: README.md  app.py
WMS/: .env.example  .gitignore  API_VERSIONING.md  GUIA_GIT_GITHUB.md  README.md  SQLALCHEMY_MIGRATION_GUIDE.md  alembic.ini  conftest.py  index.html  refactor_test_log.txt  requirements-test.txt  requirements.txt  run_tests.sh  smoke_test_factory.py
docs_negocio/: 00_mapa_sistema.md  03_endpoints_sem_jargao.md  04_decisoes_tecnicas_traduzidas.md  06_modulos_de_negocio_pendentes.md  decisoes_traduzidas.html
scripts/: release_gate.sh  run_api.sh
sdk/: README.md  pyproject.toml
sdk/jadestock_sdk/: __init__.py  client.py  contabil_client.py  ia_client.py  utils.py
tests/: test_api_inmemory.py  test_api_postgres_integration.py  test_postgres_core_integration.py  test_postgres_giro_integration.py  test_postgres_governanca_orcamentaria_integration.py  test_postgres_kanban_integration.py  test_postgres_sazonalidade_integration.py  test_processar_governanca_orcamentaria.py  test_registrar_inventario_ciclico.py  test_registrar_politica_kanban.py
(+155 files in other folders)
